2004-06-22  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (_rekey)  Bugfix:  Take bookkeeping
	aliases into account when rekeying the alias database.
	Thanks to SRE.

	* lib/Mj/List.pm:  (aux_rekey)  Bugfix:  Rekey based
	upon the stripped address, to allow xforms to be reversed.
	Thanks to SRE.

2004-06-19  Michael Yount <csf@moscow.com>

	* lib/Mj/CommandProps.pm:  Bugfix:  The "info" and "intro"
	commands should also work in a GLOBAL or DEFAULT context.

2004-06-14  Michael Yount <csf@moscow.com>

	* lib/Mj/SimpleDB/Text.pm:  (get_matching_quick_regexp)  Bugfix:
	Remove anchors from the pattern more thoroughly.
	(The rekey-verify command was returning spurious results for
	text databases.)  Thanks to SRE.

2004-05-24  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (_showtokens)  Show tokens for the
	"ALL" pseudo-list along with GLOBAL tokens.

	* lib/Mj/Token.pm:  (confirm)  Bugfix:  Record commands
	for the "ALL" pseudo-list under ALL rather than GLOBAL.
	Thanks to Roger Klorese.

2004-05-17  Michael Yount <csf@moscow.com>

	* lib/Mj/CommandProps.pm:  Allow the who command to use
	the "common" and "alias" modes together.

2004-04-29  Michael Yount <csf@moscow.com>

	* bin/mj_wwwadm:  Bugfix:  Remove white space from list names.
	Thanks to SRE.

2004-04-07  Michael Yount <csf@moscow.com>

	* bin/mj_email, mj_enqueue:  (do_qmail)  Bugfix:  
	Recognize extensions to the majordomo-owner address.
	Thanks to Peter Ajamian.

	* lib/Mj/Access.pm:  (list_access_check)  Add support
	for the COMMAND substitution to reply files.

	* lib/Mj/Config.pm:  (parse_bounce_rules)  Bugfix:
	eliminate rule duplication.  Thanks to Peter Ajamian.

2004-03-24  Michael Yount <csf@moscow.com>

	* lib/Mj/FileSpace.pm:  (_empty_dir)  Bugfix:  Call
	closedir() instead of close() for a directory.

	* lib/Mj/List.pm:  (rename_archive)  Bugfix:  Call
	closedir() instead of close() for a directory.

2004-03-02  Michael Yount <csf@moscow.com>
